# andrew-alpha

./: .env.example  .gitignore  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
app/: chainlit_app.py
public/: custom.css  custom.js
public/components/: orb-avatar-three.js  orb-avatar.js
public/elements/: OrbAvatar.jsx  ThreeOrbAvatar.jsx
rag/: __init__.py  chunking.py  config.py  modes.py  prompts.py  providers.py  retrieve.py
scripts/: export_corpus.py  ingest.py  smoke_test.py
