[project]
name = "andrew-ai"
version = "0.1.0"
description = "RAG chat over the Andrew Cohen archive"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chainlit>=2.0.0",
  "chromadb>=0.5.0",
  "litellm>=1.50.0",
  "python-dotenv>=1.0.0",
  "beautifulsoup4>=4.12.0",
  "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag*"]
